data/derived/fa15/progs/unify/prog0273.ml.out
Characters 16-36:
  let _ = List.map(sqsum, [1;2;3;4;4]);;
                  ^^^^^^^^^^^^^^^^^^^^
Error: This expression has type 'a * 'b
       but an expression was expected of type 'c -> 'd
